# traefik-plugin-rust-demo

./: .devenv.flake.nix  .gitignore  .traefik.yml  Cargo.toml  Makefile  flake.nix  plugin.wasm  readme.md
.github/workflows/: release.yml
savedevenv/: devenv.nix  devenv.yaml
server-go/: go.mod  go.sum  main.go  memory.go
src/: guest.rs  main.rs
