[package]
name = "http-wasm-header-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
#wasi-experimental-http-wasmtime = "0.9"
#anyhow = "1.0"
#tokio_wasi = { version = "1.25", features = ["full"] }
#reqwest_wasi = { version = "0.11", features = ["json"] }
