[package]
name = "http-wasm-header-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
##wasi-experimental-http-wasmtime = "0.9"
#anyhow = "1.0"
##tokio_wasi = { version = "1.25", features = ["full"] }
#tokio = { version = "1.41", features = ["rt"] }
#reqwest = { version = "0.12.8", features = ["blocking", "json"] }
##http-client = "6.5.3"
http_req_wasi  = {  version = "0.11.1", default-features = false }
#wasmedge_http_req  = "0.8.1"